add git repo details to generated SDK

--- a/.github/workflows/generate_sdk.yaml
+++ b/.github/workflows/generate_sdk.yaml
@@ -20,6 +20,8 @@ jobs:
         with:
           generator: python
           input: tmp/input-schema.json
+          git-user-id: Apicurio
+          git-repo-id: apicurio-registry-client-sdk-python
           additional-properties: "packageName=registryclient"
           ignore-file-override: .openapi-generator-ignore
       - name: Clean up temp files
