group renovate update pull requests

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
-	"automerge": true,
-	"major": {
-		"automerge": false
-	}
+  "groupName": "all",
+  "automerge": true,
+  "major": {
+	"automerge": false
+  }
 }
