--- a/.github/workflows/generate_sdk.yaml
+++ b/.github/workflows/generate_sdk.yaml
@@ -41,7 +41,7 @@ jobs:
           delete-branch: true
           branch-suffix: short-commit-hash
           branch: generate-sdk
-          reviewers: Apicurio/developers
+          reviewers: '@Apicurio/developers'
           title: "[generated] Update API client"
           commit-message: "chore: update API client"
           body: |
